package enums;

public enum DestinationEnum {
    ATM,
    CHECK,
    OUTGOING_TRANSFER
}
