package enums;

public enum SourceEnum {
    EXTERNAL_TRANSFER,
    CASH_DEPOSIT,
    SALARY;
}
