package service;

public class BankService {
    public void createCurrentAccount(){

    }

    public void createSavingAccount(){

    }

    public void deposit(){

    }

    public void withdraw(){

    }

    public void transfer(){

    }

    public void displayBalance(){

    }

    public void displayOperation(){

    }

    public void searchAccount(){

    }
}
